Replacing collect(Collectors.toList()) with toList() in Main